Fix unpack the same icon twice on unpackers layer

Previous fix tried to return unqiue normalized paths from
ExtensionIconSet::GetPaths method. But external code uses assumption
that ExtensionIconSet::GetPaths returns icons paths as they are written
in extension manifest.

This patchset reverts the previous one and tries to fix the issue on
unpackers layer:
1. Unpacker::Run normalizes paths from ExtensionIconSet and removes
   duplicates. It writes normalized paths to kDecodedImagesFilename.
2. SandboxedUnpacker::RewriteImageFiles knows about normalization and
   does checks for extensions paths accordingly.

This reverts commit 21c6dc80fae7f2767d73438883bab77f5afda583.

Bug: 799418
Change-Id: I309cd8e54489cfde54c7676d34e15c829291e9cc